# fogo-sessions

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .prettierignore  .tool-versions  AGENTS.md  Anchor.toml  Cargo.toml  Dockerfile  README.md  Tiltfile  biome.json  docker-compose.yml  eslint.config.js  flake.nix  knope.toml  package.json  paymaster-admin.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish-js.sh  turbo.json
.changeset/: accept_more_flexible_offsets_in_the_ed25519instructiondata.md  config.json  (+161 more)
programs/chain-id/: Cargo.toml  output.rs
programs/chain-id/src/: lib.rs
programs/cu-test/: Cargo.toml
programs/cu-test/src/: lib.rs
programs/domain-registry/: Cargo.toml  output.rs
programs/domain-registry/src/: domain.rs  error.rs  lib.rs  state.rs  system_program.rs
programs/example/: Cargo.toml
programs/example/src/: lib.rs
programs/intent-transfer/: CHANGELOG.md  Cargo.toml  output.rs
programs/intent-transfer/src/: be.rs  bridge_message.rs  error.rs  fees.rs  lib.rs  message.rs  nonce.rs  verify.rs
programs/intent-transfer/src/bridge/: message.rs  mod.rs
programs/intent-transfer/src/bridge/config/: mod.rs  ntt_config.rs
programs/intent-transfer/src/bridge/config/processor/: mod.rs  register_ntt_config.rs
programs/intent-transfer/src/bridge/cpi/: ntt_manager.rs
programs/intent-transfer/src/bridge/processor/: bridge_ntt_tokens.rs  mod.rs
programs/intent-transfer/src/config/: access_control.rs  mod.rs
programs/intent-transfer/src/config/processor/: mod.rs  register_fee_config.rs  register_ntt_config.rs  register_send_token_fee_config.rs
programs/intent-transfer/src/config/state/: fee_config.rs  mod.rs  send_token_fee_config.rs
programs/intent-transfer/src/cpi/: mod.rs  ntt_executor.rs  ntt_manager.rs  ntt_with_executor.rs
programs/intent-transfer/src/internal/: message.rs  mod.rs
programs/intent-transfer/src/internal/processor/: mod.rs  send_tokens.rs
programs/intent-transfer/src/intrachain/: message.rs
programs/intent-transfer/src/intrachain/processor/: mod.rs  send_native.rs  send_tokens.rs  send_tokens_with_fee.rs
programs/intent-transfer/tests/: bridge_ntt_tokens.rs  helpers.rs
programs/intent-transfer/tests/mocks/mock-ntt-executor/: Cargo.toml
programs/intent-transfer/tests/mocks/mock-ntt-executor/src/: lib.rs
programs/intent-transfer/tests/mocks/mock-ntt-manager/: Cargo.toml
programs/intent-transfer/tests/mocks/mock-ntt-manager/src/: lib.rs
programs/intent-transfer/tests/mocks/mock-ntt-with-executor/: Cargo.toml
programs/intent-transfer/tests/mocks/mock-ntt-with-executor/src/: lib.rs
programs/session-manager/: Cargo.toml  output.rs
programs/session-manager/src/: clock.rs  error.rs  lib.rs  message.rs  state.rs  system_program.rs
programs/session-manager/src/intents/: body.rs  claims.rs  ed25519.rs  message.rs  mod.rs
programs/session-manager/src/state/: mod.rs
programs/session-manager/src/state/v1/: _0.rs  _1.rs  mod.rs
programs/session-manager/src/state/v2/: _0.rs  mod.rs
programs/session-manager/src/token/: approve.rs  mod.rs  revoke.rs
programs/session-stake/: Cargo.toml  sStk-keypair.json
programs/session-stake/src/: anchor_types.rs  error.rs  lib.rs  message.rs  state.rs
programs/session-stake/src/processor/: authorize_intent.rs  authorize_user.rs  deactivate.rs  delegate.rs  deposit.rs  initialize.rs  mod.rs  stake_transfers.rs  withdraw.rs
programs/tollbooth/: CHANGELOG.md  Cargo.toml
programs/tollbooth/src/: error.rs  lib.rs
scripts/paymaster-load-test/: Cargo.toml  README.md  load-test-config.toml
scripts/paymaster-load-test/src/: config.rs  dispatcher.rs  generator.rs  main.rs  metrics.rs  reporter.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
services/paymaster/: CHANGELOG.md  Cargo.toml  README.md
services/paymaster/.sqlx/: query-3959a629158414efffdc5ecc1f4fde35da34442358022b952adc59c2e26cfa83.json  query-3b4f418dc34a63c58eb121db73a1b299118be70fd7ce40433a373430a2c02eba.json  query-4b04a039bd1c1b246a6895c1f00cec1a74dc8f73d9446079d281723aba54542d.json  query-51eb043b6db122d73f8deb6c05c515b4ea8b21e447cd7bf5146869a6431ed4d8.json  query-62aa144a7fd38c25115862ab5f3efab9e3d8805cdd8818a6633f615dcf94c69d.json  query-67915a94eddbd138610a7fdfab7f1d188bdb48d766feaef518a7ab43a02df0fc.json  query-79a0e22ccbda263145a38939724ec85fb0523cec65387c8c6d47f568f2b9f5f6.json  query-8adbc3bfb60a7802966a144aa94271828586b1f4a9f393e034993cb1405904e4.json  query-920a33953289aa2b202331a023e672c671b5ef1117ae8c7c391f550a24d875d8.json  query-af484fb70db332fd176c33c95936f9d4cd405d3b0cb17d8769dcc48fa0d71a67.json  query-bfd05a6c59d39166741c3a9f417f061eb75f5d5bb7098e2d1337b13dbdb8113c.json  query-d667c189405af9b43acb9416f87547fcb632cdad96b72c7e13fd55b79072ed55.json  query-d6e004c8bd80a3a1798a74b8f94deed1d50e8917133ae112127e41c9e86d30a2.json  query-db4b33b201a249b7d43690aa3a16cb2a82cee2b562b8198746221f0211552055.json  query-e2f81881d30ac99e46dad49c931e20de1316bc520d993a88b86907b442d588dd.json  query-fb9654b8ccbdb37a8c4ee8d2c788f31bde3d0c58056fbd3e406192f8e864d319.json  query-fee973af4e50e403f2336545e3e90d9a8f286e5100eab3fe95c0b572d63d8c55.json
services/paymaster/migrations/: 20251020133349_init.down.sql  20251020133349_init.up.sql  20251020133350_index.down.sql  20251020133350_index.up.sql  20260202175333_more_variation_fields.down.sql  20260202175333_more_variation_fields.up.sql
services/paymaster/src/: api.rs  balances.rs  cli.rs  config.rs  constraint.rs  constraint_templates.rs  domain_registry.rs  ftl_sender.rs  lib.rs  main.rs  metrics.rs  parse.rs  pooled_http_sender.rs  rpc.rs  serde.rs  swap.rs  transaction.rs  unwrap_fogo.rs  utils.rs
services/paymaster/src/config/: mod.rs  tolls.rs
services/paymaster/src/config_manager/: config.rs  fee.rs  load_config.rs  mod.rs
services/paymaster/src/constraint/: config.rs  fee.rs  gas.rs  mod.rs  templates.rs  tolls.rs  transaction.rs
services/paymaster/src/db/: config.rs  load_config.rs  mod.rs  pool.rs  seed_from_config.rs
services/paymaster/src/db/migrations/: 0001_init.sql
sessions-sdk/: Cargo.toml
sessions-sdk/src/: lib.rs
(+447 files in other folders)
