[workspace]
members = ["programs/*", "packages/sessions-sdk-rs", "packages/solana-intents", "services/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
borsh = "1.5.7"
bytemuck = "1.23.1"
fogo-sessions-sdk = { path = "packages/sessions-sdk-rs" }
mpl-token-metadata = "5.1.0"
nom = "8.0.0"
solana-address-lookup-table-interface = "2.2.1"
solana-client = "2.2.1"
solana-commitment-config = "2.2.1"
solana-compute-budget-interface = { version = "2.2.1", features = ["serde"] }
solana-derivation-path = "2.2.1"
solana-ed25519-program = "2.2.1"
solana-hash = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-offchain-message = "2.2.1"
solana-packet = "2.2.1"
solana-program = "2.2.1"
solana-pubkey = "2.2.1"
solana-rpc-client-api = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-seed-derivable = "2.2.1"
solana-seed-phrase = "2.2.1"
solana-signature = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
solana-transaction-error = "2.2.1"
solana-transaction-status-client-types = "2.2.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
