[workspace]
members = ["programs/*", "programs/intent-transfer/tests/mocks/*", "packages/sessions-sdk-rs", "packages/solana-intents", "services/*", "scripts/paymaster-load-test"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
anyhow = "1.0.100"
arc-swap = "1.7.1"
base64 = "0.22.1"
bincode = "2.0.1"
borsh = "1.5.7"
bytemuck = "1.23.1"
chain-id = { version = "0.1.0", path = "programs/chain-id" }
clap = { version = "4.5.51", features = ["derive", "env"] }
dashmap = "6.1.0"
fogo-sessions-sdk = { version = "0.7.5", path = "packages/sessions-sdk-rs" }
futures = "0.3.31"
governor = "0.6.3"
hex = "0.4.3"
intent-transfer = { version = "0.1.1", path = "programs/intent-transfer" }
itertools = "0.14.0"
mpl-token-metadata = "5.1.0"
nom = "8.0.0"
solana-intents = { version = "0.1.1", path = "packages/solana-intents" }
rand = "0.9.2"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
solana-account = "2.2.1"
solana-address = "1.0.0"
solana-address-lookup-table-interface = "2.2.1"
solana-client = "2.2.1"
solana-commitment-config = "2.2.1"
solana-compute-budget-interface = { version = "2.2.1", features = ["serde"] }
solana-derivation-path = "2.2.1"
solana-ed25519-program = "2.2.1"
solana-fee-structure = "2.2.1"
solana-hash = "2.2.1"
solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-offchain-message = "2.2.1"
solana-packet = "2.2.1"
solana-program = "2.2.1"
solana-pubkey = "2.2.1"
solana-pubsub-client = "2.2.1"
solana-rpc-client = "2.2.1"
solana-rpc-client-api = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-seed-derivable = "2.2.1"
solana-seed-phrase = "2.2.1"
solana-signature = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = { version = "2.2.1", features = ["bincode"] }
solana-transaction-error = "2.2.1"
solana-transaction-status-client-types = "2.2.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token = {version = "7.0.0", features = ["no-entrypoint"]}
tokio = { version = "1.48.0", features = ["full"] }
tollbooth = { version = "0.2.0", path = "programs/tollbooth" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
wildcard_dependencies = "deny"

# Panics
fallible_impl_from = "warn"
panic = "warn"
panic_in_result_fn = "warn"
indexing_slicing = "warn"
string_slice = "warn"
todo = "warn"
unchecked_duration_subtraction = "warn"
unreachable = "warn"

# Correctness
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_sign_loss = "warn"
collection_is_never_read = "warn"
match_wild_err_arm = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
same_name_method = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
while_float = "warn"