[package]
name = "fogo-sessions-sdk"
version = "0.0.0"
edition = { workspace = true}

[lib]
crate-type = ["rlib"]
name = "fogo_sessions_sdk"

[features]
anchor = ["anchor-lang"]
borsh = ["dep:borsh"]

[dependencies]
borsh = { version = "1.0.0", features = ["derive"], optional = true }
solana-pubkey = {version = "2.2.0", features = ["borsh"]}
solana-program-error = {version = "2.2.0"}
thiserror = "2.0"
solana-sysvar = {version = "2.2.0", features = ["bincode"]}
solana-account-info = {version = "2.2.0"}
anchor-lang = { workspace = true, optional = true }

[dev-dependencies]
base64 = "0.22.1"


