[package]
name = "sessions-sdk"
version = "0.0.0"
edition = { workspace = true}

[lib]
crate-type = ["rlib"]

[dependencies]
borsh = { version = "1.0.0", features = ["derive"] }
solana-pubkey = {version = "2.2.0", features = ["borsh"]}
solana-program-error = {version = "2.2.0"}
thiserror = "2.0"
solana-sysvar = {version = "2.2.0"}
solana-account-info = {version = "2.2.0"}
