[package]
name = "chain-id"
version = "0.1.0"
description = "Fogo Sessions chain-id program"
license = { workspace = true }
repository = "https://github.com/fogo-foundation/fogo-sessions"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "chain_id"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
