[package]
name = "domain-registry"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "domain_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
bytemuck = { version = "1.23.1", features = ["derive"] }
fogo-sessions-sdk = { path = "../../packages/sessions-sdk-rs" }
