[package]
name = "example"
version = "0.1.0"
edition = { workspace = true}

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
spl-token = { version = "7.0.0", features = ["no-entrypoint"]}
fogo-sessions-sdk = { path = "../../sdk", features = ["anchor"]}
