[package]
name = "example"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
fogo-sessions-sdk = { path = "../../packages/sessions-sdk-rs", features = ["anchor"] }
