[package]
name = "intent-transfer"
version = "0.1.1"
description = "Fogo Sessions intent-transfer program"
license = { workspace = true }
repository = "https://github.com/fogo-foundation/fogo-sessions"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "intent_transfer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
chain-id = { workspace = true, features = ["no-entrypoint"] }
hex = {workspace = true}
mpl-token-metadata = { workspace = true }
nom = { workspace = true }
solana-intents = { workspace = true }

[dev-dependencies]
fogo-sessions-sdk = { workspace = true }
indoc = "2.0.6"
litesvm = "0.7.1"
solana-account = {workspace = true}
solana-address = {workspace = true}
solana-instruction = {workspace = true}
solana-keypair = {workspace = true}
solana-pubkey = {workspace = true}
solana-signature = {workspace = true}
solana-signer = {workspace = true}
solana-transaction = {workspace = true}
spl-associated-token-account = {workspace = true}
spl-token = {workspace = true}

[lints]
workspace = true
