[package]
name = "session-manager"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "session_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
fogo-sessions-sdk = { path = "../../packages/sessions-sdk-rs", features = ["anchor"] }
mpl-token-metadata = "5.1.0"
chrono = "0.4.41"