[package]
name = "session-manager"
version = "0.1.0"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "session_manager"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
chain-id = { path = "../chain-id", features = ["no-entrypoint"] }
domain-registry = { path = "../domain-registry", features = ["no-entrypoint"] }
chrono = "0.4.41"
fogo-sessions-sdk = { path = "../../packages/sessions-sdk-rs" }
mpl-token-metadata = "5.1.0"
rust_decimal = "1.37.2"

[dev-dependencies]
rust_decimal = { version = "1.37.2", features = ["macros"] }
fogo-sessions-sdk = { path = "../../packages/sessions-sdk-rs", features = ["token-program"] }
