[package]
name = "tollbooth"
version = "0.1.1"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "tollbooth"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
fogo-sessions-sdk = { workspace = true, features = ["anchor"] }
