[package]
name = "tollbooth"
version = "0.1.0"
description = "Fogo Sessions tollbooth program"
license = { workspace = true }
repository = "https://github.com/fogo-foundation/fogo-sessions"
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "tollbooth"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
fogo-sessions-sdk = { workspace = true, features = ["anchor"] }
