[package]
name = "fogo-paymaster"
version = "0.2.0"
edition = { workspace = true }
license = { workspace = true }
description = "Fogo paymaster service and transaction validator CLI"
repository = "https://github.com/fogo-foundation/fogo-sessions"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = {version = "0.10.1", features = ["typed-header"]}
axum-prometheus = "0.9.0"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = {workspace = true}
bytemuck = {workspace = true}
clap ={version = "4.5.41", features = ["derive"]}
config = "0.15.13"
dashmap = "6.1.0"
fogo-sessions-sdk = { version = "0.6.0", path = "../../packages/sessions-sdk-rs" }
futures = "0.3.31"
governor = "0.6.3"
hex = "0.4.3"
opentelemetry = "0.30.0"
opentelemetry-otlp = {version = "0.30.0", features = ["grpc-tonic"]}
opentelemetry_sdk = {version = "0.30.0", features = ["rt-tokio"]}
reqwest = "0.12.23"
serde = "1.0.219"
serde_with = { version = "3.14.0", features = ["base64"] }
solana-address-lookup-table-interface = {workspace = true}
solana-client = {workspace = true}
solana-commitment-config = {workspace = true}
solana-compute-budget-interface = { workspace = true, features = ["borsh"] }
solana-derivation-path = {workspace = true}
solana-ed25519-program = {workspace = true}
solana-hash = {workspace = true}
solana-keypair = {workspace = true, features = ["seed-derivable"]}
solana-message = {workspace = true}
solana-packet = {workspace = true}
solana-program = {workspace = true}
solana-pubkey = {workspace = true}
solana-pubsub-client = {workspace = true}
solana-rpc-client-api = {workspace = true}
solana-sdk-ids = {workspace = true}
solana-seed-derivable = {workspace = true}
solana-seed-phrase = {workspace = true}
solana-signature = {workspace = true}
solana-signer = {workspace = true}
solana-transaction = {workspace = true}
solana-transaction-error = {workspace = true}
solana-transaction-status-client-types = {workspace = true}
spl-associated-token-account = {workspace = true}
tokio = {version = "1.46.1", features = ["full"]}
tower-http = {version = "0.6.6", features = ["cors"]}
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "json"]}
utoipa = "5.4.0"
utoipa-axum = "0.2.0"

[[bin]]
name = "paymaster-tx-validator"
path = "src/bin/tx_validator.rs"
