[package]
name = "mock-ntt-manager"
version = "0.1.0"
edition = {workspace = true}

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_ntt_manager"

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
spl-token = {workspace = true}

[features]
no-entrypoint = []

[lints]
workspace = true
